src/objects/Charges_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>All Charges Details From Quotation (For Deal Description)</description>
    <fields>
        <fullName>Club_Membership__c</fullName>
        <label>Club Membership</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Charges__c</fullName>
        <label>Infrastructure Charges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Charges__c</fullName>
        <label>Legal Charges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVAT_1__c</fullName>
        <label>MVAT @ 1%</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_yr_Maintenance__c</fullName>
        <label>1 yr Maintenance *</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Charges__c</fullName>
        <label>Registration Charges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Money_ST__c</fullName>
        <label>Share Money ST</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Money__c</fullName>
        <label>Share Money</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sinking_Funds__c</fullName>
        <label>Sinking Funds</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Society_Formation_ST__c</fullName>
        <label>Society Formation ST</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Society_Formation__c</fullName>
        <label>Society Formation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_5__c</fullName>
        <label>Stamp Duty @ 5%</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Charges__c</fullName>
        <label>Utility Charges **</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Yr_Advance_Maintenance_ST__c</fullName>
        <label>2 Yr Advance Maintenance ST</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Yr_Advance_Maintenance__c</fullName>
        <label>2 Yr Advance Maintenance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Charges Details</label>
</CustomObject>